<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Actividades.DetallePlantasActivity">
    <ScrollView
        android:id="@+id/add_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/textNombreTRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/datos_nombre"
                    android:textStyle="bold"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/textApellidoTRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/datos_apellido"
                    android:textStyle="bold"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/textCorreoTRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/datos_correo"
                    android:textStyle="bold"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/textPassTRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:textStyle="bold"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/textTelefonoTRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/datos_telefono"
                    android:textStyle="bold"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/textProfesionTRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/datos_profesion"
                    android:textStyle="bold"/>
            </android.support.design.widget.TextInputLayout>




            <ImageView
                android:id="@+id/foto_perfil"
                android:layout_width="134dp"
                android:layout_height="144dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_tomarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_tomar"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_registra"/>

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_cancelar"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>