<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Actividades.RevisarPlantasActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="351dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:layout_alignParentTop="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="303dp" android:layout_marginTop="0dp"/>

        <ImageView
            android:id="@+id/planta_imagen"
            android:layout_width="wrap_content"
            android:layout_height="186dp"
            android:layout_gravity="center"
            android:src="@drawable/herbario_uq"/>
        <!--<com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:padding="10dip"
                app:centered="true"
                app:fillColor="#df0623"
                app:pageColor="#fff"
                app:snap="false" android:layout_marginBottom="190dp"/>-->


    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relative">
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textNombreTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datos_nombre"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textNombreRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textGeneroTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_genero"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textGeneroRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textFamiliaTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_familia"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textFamiliaRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textSubFamiliaTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_subfamilia"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textSubFamiliaRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textTribuTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_tribu"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textTribuRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textEspecieTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_especie"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textEspecieRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textDetalleTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_detalle"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textDetalleRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textAutorTDet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_autor"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textAutorRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_aprobar_planta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aprobado"
                android:textSize="16dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btn_rechazar_planta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/rechazada"/>
        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>